Mon Nov 22 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.4
	require 'iconv' only if RUBY_VERSION < 1.9.0
	implicitly accept ruby's String for [B (byte array)
	copy back byte[] contents into original String
 *test/test.rb
	add string buffer test (test_bothdirection_buffer)
Wed Nov 17 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.3
 *ext/load.c
	Check JAVA_HOME before load JVM  (OS X specific)
	change int -> size_t for 64bit OS
 *test/test_osxjvm.rb
	add new test for OS X specific JVM detection.
Sat Oct 30 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.2
 *extconf.rb
	Change OSX's include path detecting
Tue Oct 26 arton
 *ext/rjb.c
	RJB_VERSION -> 1.3.1
 *rjb.rake
	make universal-darwin gem for Mac bundled ruby.
Sun Oct 24 arton
 *sample/filechooser.rb
	omit Thread use (cause JVM crush with 1.9 and StackOverflow with 1.8)
Sat Oct 23 arton	
 *ext/rjb.c
	RJV_VERSION -> 1.3.0
	add loaded? class method.
	add add_classpath method (add jars without invoking load method)
 *ext/load.c
	OSX default jvm name changes to "JavaVM" (bug#28667 reported by Jeff Adams, thanks Jeff !)
 *ext/extconf.rb
	OSX javahome set to /System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK
 *lib/rjbextension.rb
	use Rjb::add_classpath method instead of Kernel's class vars.
 *test/test.rb, test/exttest.rb
	fix add_jar test, previous version load them from jp directory.
Tue Sep 22 arton
 *ext/rjb.c
	RJV_VERSION -> 1.2.10
	add add_jars method. add_jar and add_jars can take an array of jars.
 *test/test.rb
	add calling add_jar with an array test.
Tue Sep 21 arton
 *ext/rjb.h
	export ClassLoader methods
 *ext/load.c
	move ClassLoader interaction codes into rjb.c
 *ext/rjb.c
	RJV_VERSION -> 1.2.9
	add add_jar method.
	loading classes throgh URLClassLoader if the user add Jars
 *lib/rjb.rb
	change MODIFIER module into a constant. Because it implys Rjb::import.
	change Config -> RbConfig for 1.9
 *test/test.rb
	add Rjb::add_jar test
 *test/JarTest.java
 *test/jartest.jar
	add for Rjb::add_jar test
Fri Sep 17 arton